# forth-like

./: CMakeLists.txt  README.md  bin_op.cpp  bin_op.h  commands.cpp  commands.h  commands_namespace.cpp  data.h  data_stack.h  forth_test.cpp  interpreter.cpp  interpreter.h  interpreter_error.h  main.cpp  smart_pointer.h
